--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -11,7 +11,7 @@
             全従業員が豊かになれるよう、さまざまな取り組みをしています。
           </p>
           <div class="about-us-link">
-            <%= link_to 'LBrestaurantの特徴', '/path/to/destination', class: 'btn about-us-btn' %>
+            <%= link_to 'LBrestaurantの特徴', '/path/to/destination', class: 'user-btn about-us-btn' %>
           </div>
         </div>
         <div class="about-us-img">
@@ -31,10 +31,10 @@
       </p>
       <div class="d-flex  justify-content-center">
         <div class="restaurant-link">
-          <%= link_to '店舗一覧', '/path/to/destination', class: 'btn restaurant-btn' %>
+          <%= link_to '店舗一覧', '/path/to/destination', class: 'user-btn restaurant-btn' %>
         </div>
         <div class="restaurant-link">
-          <%= link_to '会社概要', '/path/to/destml-ination', class: 'btn restaurant-btn' %>
+          <%= link_to '会社概要', '/path/to/destml-ination', class: 'user-btn restaurant-btn' %>
         </div>
       </div>
     </div>
@@ -52,10 +52,10 @@
       </p>
       <div class="d-flex  justify-content-center">
         <div class="carrer-link">
-          <%= link_to '採用情報', '/path/to/destination', class: 'btn carrer-btn' %>
+          <%= link_to '採用情報', '/path/to/destination', class: 'user-btn carrer-btn' %>
         </div>
         <div class="carrer-link">
-          <%= link_to '代表メッセージ', '/path/to/destml-ination', class: 'btn carrer-btn' %>
+          <%= link_to '代表メッセージ', '/path/to/destml-ination', class: 'user-btn carrer-btn' %>
         </div>
       </div>
     </div>
@@ -64,10 +64,10 @@
     <h3 class="home-news-title">NEWS</h3>
     <div class="d-flex justify-content-center">
       <div>
-        <button id="news-button" class="btn news-btn">お知らせ</button>
+        <button id="news-button" class="user-btn news-btn">お知らせ</button>
       </div>
       <div>
-         <button id="article-button" class="btn article-btn">ブログ</button>
+         <button id="article-button" class="user-btn article-btn">ブログ</button>
       </div>
     </div>
     <div class="home-content-box home-news-content">
