update/公開側のトップページの各セクションのタイトルを画像に変更

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -4,7 +4,7 @@
     <div class="home-content-box about-us-content">
       <div class="d-flex">
         <div>
-          <h3 class="about-us-title">ABOUT US</h3>
+          <div class="about-us-title"><%= image_tag('home/about-us-title.png') %></div>
           <p class="about-us-text">
             社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
             そして、その過程や結果により全従業員が少しでも豊かな人生を物心両面で歩めることを最大の目的としています。<br>
@@ -22,7 +22,7 @@
   </div>
   <div class="home-restaurant-wrap">
     <div class="home-content-box restaurant-content">
-      <h3 class="restaurant-title">RESTAURANT</h3>
+      <div class="restaurant-title"><%= image_tag('home/restaurant-title.png') %></div>
       <h4 class="restaurant-sub-title">LBrestaurantについて</h4>
       <p class="restaurant-text">
         2023年に法人化した新しい会社です。様々な制度がまだまだ未完成です。<br>
@@ -44,7 +44,7 @@
       <div class="carrer-img">
         <%= image_tag('home/carrer.png') %>
       </div>
-      <h3 class="carrer-title">CARRER</h3>
+      <div class="carrer-title"><%= image_tag('home/carrer-title.png') %></div>
       <p class="carrer-text">
         年功序列は一切ありません。実力のある人をどんどん登用・抜擢していきます。自分に自信のある方、ここで自分の人<br>
         生変えたい！と思う方にはうってつけの環境です。飲食未経験でもチャレンジ精神があれば大歓迎！ぜひ一緒に働き<br>
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div class="home-news-wrap">
-    <h3 class="home-news-title">NEWS</h3>
+    <div class="home-news-title"><%= image_tag('home/news-title.png') %></div>
     <div class="d-flex justify-content-center">
       <div>
         <button id="news-button" class="user-btn news-btn">お知らせ</button>
