update/公開側のクラス名のミスやmarginのミスなどを修正

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -653,11 +653,11 @@ ul {
   position: relative;
 }
 
-// shop
+// restaurant
 .home-restaurant-wrap {
   width: 100%;
   background-size: 100% auto;
-  background-image: url('/assets/home/shop.png');
+  background-image: url('/assets/home/restaurant.png');
   height: 550px;
   padding: 70px 0;
 }
@@ -670,7 +670,7 @@ ul {
 
 .restaurant-title {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 60px;
 }
 
 .restaurant-sub-title {
@@ -706,7 +706,7 @@ ul {
 .carrer-content {
   background-color: #D32600;
   border-radius: 10px;
-  height: 400px;
+  height: 467px;
 }
 
 .carrer-img {
