update/公開側のトップページのボタンに利用しているアイコンをfont awesomeに変更し、hover時に右に5px移動するように変更

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>LbrestaurantWebsite</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="https://kit.fontawesome.com/50cd9f29f3.js" crossorigin="anonymous"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
