--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -2,6 +2,7 @@
 @import 'main.scss';
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
+
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
   border: 0;
   outline: 0;
@@ -582,7 +583,6 @@ ul {
   display: block;
 }
 
-
 /*--------------------------------------------------------------
 # Home
 --------------------------------------------------------------*/
@@ -599,12 +599,19 @@ ul {
 .home-about-us-wrap .user-btn::after,
 .home-restaurant-wrap .user-btn::after,
 .home-carrer-wrap .user-btn::after {
-  content: ">";
+  content: "\f105";
+  font-family: "Font Awesome 5 Free";
   position: absolute;
-  top: 50%;
   right: 20px;
-  transform: translateY(-50%);
+  top: 30%;
 }
+
+.home-about-us-wrap .user-btn:hover::after,
+.home-restaurant-wrap .user-btn:hover::after,
+.home-carrer-wrap .user-btn:hover::after {
+  right: 15px; 
+}
+
 
 .home-content-box {
   max-width: 1080px;
