--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -11,7 +11,9 @@
             全従業員が豊かになれるよう、さまざまな取り組みをしています。
           </p>
           <div class="about-us-link">
-            <%= link_to 'LBrestaurantの特徴', '/path/to/destination', class: 'user-btn about-us-btn' %>
+            <div class="about-us-link">
+              <%= link_to 'LBrestaurantの特徴', '/path/to/destination', class: 'user-btn about-us-btn' %>
+            </div>
           </div>
         </div>
         <div class="about-us-img">
@@ -31,7 +33,9 @@
       </p>
       <div class="d-flex  justify-content-center">
         <div class="restaurant-link">
-          <%= link_to '店舗一覧', '/path/to/destination', class: 'user-btn restaurant-btn' %>
+          <div class="restaurant-link">
+            <%= link_to '店舗一覧', '/path/to/destination', class: 'user-btn restaurant-btn' %>
+          </div>
         </div>
         <div class="restaurant-link">
           <%= link_to '会社概要', '/path/to/destml-ination', class: 'user-btn restaurant-btn' %>
