--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -759,6 +759,24 @@ ul {
   padding: 90px 0 40px;
 }
 
+.tab_item {
+  display: block;
+}
+
+input[name="tab_item"] {
+  display: none;
+}
+
+.tab_content {
+  display: none;
+}
+
+#tab1:checked ~ #tab_content #tab1_content,
+#tab2:checked ~ #tab_content #tab2_content { 
+  display: block;
+}
+
+
 .news-btn,
 .article-btn {
   width: 320px;
@@ -773,8 +791,12 @@ ul {
   position: relative;
 }
 
-.news-btn:after,
-.article-btn:after {
+.tab_container input:checked + .tab_item {
+  background-color: #D32600;
+  color: #fff;
+}
+
+.tab_container input:checked + .tab_item:after {
   content: "";
   position: absolute;
   bottom: -17px;
@@ -784,8 +806,8 @@ ul {
   border-style: solid;
   border-width: 17px 17px 0 17px;
   border-color: #D32600 transparent transparent transparent;
-  display: none;
 }
+
 
 .article-btn.active:after {
   display: block;
@@ -794,7 +816,6 @@ ul {
 .news-btn.active:after {
   display: block;
 }
-
 
 .home-news-content {
   background-color: #FFFFFF;;
