--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -171,11 +171,11 @@
           <% end %>
         </div>
       </div>
-      <button class="restaurant-link tab_button" id="tab1_button">
-        <%= link_to 'お知らせ一覧をみる', '/path/to/destination', class: 'user-btn restaurant-btn' %>
+      <button class="tab_button" id="tab1_button">
+        <%= link_to 'お知らせ一覧をみる', '/path/to/destination', class: 'user-btn news-index-btn' %>
       </button>
-      <button class="restaurant-link tab_button" id="tab2_button">
-        <%= link_to 'ブログ一覧をみる', '/path/to/destination', class: 'user-btn restaurant-btn' %>
+      <button class="tab_button" id="tab2_button">
+        <%= link_to 'ブログ一覧をみる', '/path/to/destination', class: 'user-btn news-index-btn' %>
       </button>
     </div>
   </div>
