update/公開側のトップ画面の各コンテンツのタイトル画像を画質が悪いため、画質の良いものに差し替え

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -4,7 +4,7 @@
     <div class="home-content-box about-us-content">
       <div class="d-flex">
         <div>
-          <div class="about-us-title"><%= image_tag('home/about-us-title.png') %></div>
+          <div class="about-us-title"><%= image_tag('home/about-us-title.png', width: '213px', height: '31px') %></div>
           <p class="about-us-text">
             社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
             そして、その過程や結果により全従業員が少しでも豊かな人生を物心両面で歩めることを最大の目的としています。<br>
@@ -24,7 +24,7 @@
   </div>
   <div class="home-restaurant-wrap">
     <div class="home-content-box restaurant-content">
-      <div class="restaurant-title"><%= image_tag('home/restaurant-title.png') %></div>
+      <div class="restaurant-title"><%= image_tag('home/restaurant-title.png', width: '282px', height: '30px') %></div>
       <h4 class="restaurant-sub-title">LBrestaurantについて</h4>
       <p class="restaurant-text">
         2023年に法人化した新しい会社です。様々な制度がまだまだ未完成です。<br>
@@ -46,9 +46,9 @@
   <div class="home-carrer-wrap">
     <div class="home-content-box carrer-content">
       <div class="carrer-img">
-        <%= image_tag('home/carrer.png') %>
+        <%= image_tag('home/carrer.png', width: '181px', height: '34px') %>
       </div>
-      <div class="carrer-title"><%= image_tag('home/carrer-title.png') %></div>
+      <div class="carrer-title"><%= image_tag('home/carrer-title.png', width: '128px', height: '27px') %></div>
       <p class="carrer-text">
         年功序列は一切ありません。実力のある人をどんどん登用・抜擢していきます。自分に自信のある方、ここで自分の人<br>
         生変えたい！と思う方にはうってつけの環境です。飲食未経験でもチャレンジ精神があれば大歓迎！ぜひ一緒に働き<br>
@@ -66,7 +66,7 @@
   </div>
   
   <div class="home-news-wrap">
-    <div class="home-news-title"><%= image_tag('home/news-title.png') %></div>
+    <div class="home-news-title"><%= image_tag('home/news-title.png', width: '128px', height: '30px') %></div>
     <div class="tab_container clearfix">
       <input id="tab1" type="radio" name="tab_item" checked>
       <label class="tab_item tab_item_left_margin user-btn news-btn" for="tab1">お知らせ</label>
