--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -157,38 +157,22 @@ ul {
   border-bottom: 1px solid #999;
 }
 
-.h1style {
-  position: relative;
-  height: 132px;
-  margin-bottom: 60px;
-  padding-top: 58px;
-  font-size: 2.125rem;
-  text-align: center;
+.section-title-box {
+  width: 100%;
+  height: 250px;
+  background-image: url('/assets/section-gradation.png'), url('/assets/section-image.png');
+  background-size: 100% auto;
+  background-repeat: no-repeat, no-repeat;
+  display: flex;
+  align-items: center;
 }
 
-.h1style::after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 45px;
-  height: 4px;
-  background-color: #666;
-  transform: translateX(-50%);
+.section-title {
+  color: #FFFFFF;
+  font-size: 32px;
+  font-weight: 900;
+  margin-left: 45px;
 }
-
-@media screen and (max-width: 576px){
-  .h1style {
-    height: 80px;
-    margin-bottom: 30px;
-    padding-top: 30px;
-    background-size: 95% auto;
-    background-position: center center;
-    font-size: 1.6rem
-  }
-}
-
 /*--------------------------------------------------------------
 # Disable AOS delay on mobile
 --------------------------------------------------------------*/
