--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -29,6 +29,14 @@ ul {
   list-style: none;
 }
 
+.page-link.active, .active > .page-link {
+  z-index: initial;
+  color: initial;
+  background-color: initial;
+  border-color: initial;
+}
+
+
 .user-btn {
   border-radius: 4px;
   border: none;
@@ -160,9 +168,8 @@ ul {
 .section-title-box {
   width: 100%;
   height: 250px;
-  background-image: url('/assets/section-gradation.png'), url('/assets/section-image.png');
+  background-image: url('/assets/section-image.png');
   background-size: 100% auto;
-  background-repeat: no-repeat, no-repeat;
   display: flex;
   align-items: center;
 }
@@ -807,9 +814,9 @@ ul {
 }
 
 .tab_container {
-  padding-bottom: 1em;
   margin: 0 auto;
 }
+
 .tab_item {
   width: calc(100%/4);
   float: left;
@@ -854,7 +861,7 @@ input[name="tab_item"] {
   margin-bottom: 55px;
   display: none;
   float: left;
-  border-style: solid;
+  max-width: 1080px;
 }
 
 .tab_pointer {
@@ -1064,8 +1071,32 @@ input[name="tab_item"] {
 /*--------------------------------------------------------------
 # News
 --------------------------------------------------------------*/
-.news-content {
-  border-bottom: 1px solid #999;
+.news-wrap {
+  width: 100%;
+  background-color: #FFF7E3;
+  height: 1952px;
+}
+
+.article-tab a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.tab_item_top_margin {
+  margin-top: 80px;
+}
+
+.news-tab_content_wrap {
+  margin-bottom: 0;
+  margin-top: 10px;
+  margin: 0 11.4%;
+}
+
+.article-content {
+  height: 297px;
+  margin-bottom: 30px;
+  display: flex;
+  background-color: #FFFFFF;
 }
 
 .news-date {
@@ -1160,7 +1191,7 @@ input[name="tab_item"] {
   background-color: transparent;
 }
 
-.default-article-image {
+.article-image {
   width: 494px;
   height: 228px;
 }
@@ -1173,8 +1204,8 @@ input[name="tab_item"] {
 }
 
 .article-info {
-  padding: 20px 22px;
-  min-height: 112px;
+  width: 708px;
+  padding: 10px 55px;
 }
 
 @media (max-width: 576px) {
@@ -1183,13 +1214,11 @@ input[name="tab_item"] {
   }
 }
 
-.article-title {
-  font-size: 18px;
-}
-
 .article-category {
-  font-size: 13px;
-  margin-top: 3rem;
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 28px;
+  color: #8F8F8F;
 }
 
 .event-category {
@@ -1206,6 +1235,11 @@ input[name="tab_item"] {
 
 .other-category {
   color: orange;
+}
+
+.article-title {
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .article-show-image {
