update/公開側のトップページのnewsコンテンツの一覧に行くリンクをそれぞ正しいリンクに変更して、変数を持たせることでnews一覧画面でそれぞれ対応したnewsタブを表示するように設定

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -172,10 +172,10 @@
         </div>
       </div>
       <button class="tab_button" id="tab1_button">
-        <%= link_to 'お知らせ一覧をみる', '/path/to/destination', class: 'user-btn news-index-btn' %>
+        <%= link_to 'お知らせ一覧をみる', news_index_path, class: 'user-btn news-index-btn' %>
       </button>
       <button class="tab_button" id="tab2_button">
-        <%= link_to 'ブログ一覧をみる', '/path/to/destination', class: 'user-btn news-index-btn' %>
+        <%= link_to 'ブログ一覧をみる', news_index_path(active_tab: @active_tab), class: 'user-btn news-index-btn' %>
       </button>
     </div>
   </div>
