--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -1,9 +1,9 @@
 <%= render partial: 'public/shared/section-title', locals: { section_title: 'ニュース' } %>
 <div class="news-wrap">
   <div class="tab_container clearfix news-content">
-    <input id="tab1" type="radio" name="tab_item" checked>
+    <input id="tab1" type="radio" name="tab_item" <%= "checked" unless @active_tab == 'tab2' %>>
     <label class="tab_item tab_item_left_margin tab_item_top_margin user-btn news-btn" for="tab1">お知らせ</label>
-    <input id="tab2" type="radio" name="tab_item">
+    <input id="tab2" type="radio" name="tab_item" <%= "checked" if @active_tab == 'tab2' %>>
     <label class="tab_item tab_item_right_margin tab_item_top_margin user-btn article-btn" for="tab2">ブログ</label>
     <div class="tab_pointer_space"></div>
     <div class="tab_pointer_space" id="tab_pointer_space1">
